blurred background to navbar dropdown fixed!

--- a/react/src/assets/scss/components/_navigationbar.scss
+++ b/react/src/assets/scss/components/_navigationbar.scss
@@ -25,54 +25,40 @@
         width: 100%;
     }
 
-    // Navigation menu and drop down on small devices
-    .dropdown-navigation-menu{
-        position: absolute;
-        top:100%;
-        right:0;
-        padding:1rem;
-        backdrop-filter: blur(8px);
-        background-color: rgba(255, 255, 255, 0.185);
-        display: none;
-        width: 100%;
+    .navigation-menu {
+        grid-column: 2;
+        grid-row: 2;
+        justify-self: right;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        padding:0;
+        margin-top: auto;
+        margin-bottom: 0.3rem;
+        width: fit-content;
 
         @include lg {
-            display:inline;
-            position: initial;
-            backdrop-filter: none;
-            background-color: transparent;
+            flex-direction: row;
+            justify-content: space-between;
+            background-color:  rgba(255, 255, 255, 0);;
         }
 
-        .navigation-menu {
-            grid-column: 2;
-            grid-row: 2;
-            display: flex;
-            flex-direction: column;
-            list-style-type: none;
-            padding:0;
-            margin-top: auto;
-            margin-bottom: 0.3rem;
-            width: 100%;
-    
-            @include lg {
-                flex-direction: row;
-                justify-content: space-between;
+        .navigation-menu-item {
+            margin-right: 1rem;
+            display: inline;
+
+            @include md {
+                display:initial;
             }
-    
-            .navigation-menu-item {
-                margin-right: 1rem;
-                
-                &:last-child{
-                margin-right: 0rem;
-                }
-    
-                @include md {
-                    display:initial;
-                }
-            }   
-        }
-    }
 
+            @include lg {
+                &:last-child{
+                    margin-right: 0rem;
+                }
+            }
+        }   
+    }
 
     // my account and search
     .group {
@@ -103,3 +89,61 @@
         }
     }
 }
+
+// Navigation menu and drop down on small devices
+.dropdown-navigation-menu{
+    position: fixed;
+    top:2.5rem;
+    left:0;
+    right:1rem;
+    padding:1rem;
+    display: none;
+    width: 100%;
+    background-color: transparent;
+
+    @include lg {
+        display:inline;
+        position: initial;
+        backdrop-filter: none;
+        background-color: transparent;
+    }
+}
+
+.background-container{
+
+    position: fixed;
+    top:0;
+    left: 50%;
+    transform: translateX(-50%);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    border-radius: 5rem;
+    padding:0 2rem;
+    z-index: 5;
+
+    @include lg {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .background-div{
+        grid-column: 2;
+        position: fixed;
+        top:4.3rem;
+        right:1rem;
+        height: 7rem;
+        width: 7rem;
+        backdrop-filter: blur(8px);
+        background-color: rgba(255, 255, 255, 0.185);
+
+        z-index: 10;
+
+        @include md {
+        }
+    }
+}
+
+
+
